[package]
name = "audio-visualizer"
description = """
Smple audio visualization library which is especially useful for developers to visually check audio
samples, e.g. by waveform or spectrum. (So far) this library is not capable of doing nice visualizations
for end users.
"""
version = "0.4.0"
authors = ["Philipp Schuster <phip1611@gmail.com>"]
edition = "2021"
keywords = ["audio", "visualizer", "waveform", "spectrum"]
categories = ["multimedia::audio", "development-tools"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/phip1611/audio-visualizer"
repository = "https://github.com/phip1611/audio-visualizer"
documentation = "https://docs.rs/audio-visualizer/"
exclude = [
    "res",
    "test"
]

[dependencies]
png = "0.17"
# faster compilation: remove unnecessary features
plotters = { version = "0.3", features = ["bitmap_backend", "line_series"] }
plotters-bitmap = "0.3"
ringbuffer = "0.15.0"
cpal = "0.15"
minifb = "0.25" # gui window

[dev-dependencies]
minimp3 = "0.5"
lowpass-filter = "0.3"
spectrum-analyzer = "1.2"
biquad = "0.4"

# otherwise FFT and other code is too slow
[profile.dev]
opt-level = 1
